--- a/Javascript/ejercicio2/ej2.html
+++ b/Javascript/ejercicio2/ej2.html
@@ -2,11 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <title>Ejercicio 2 - El primer script</title>
+    <title>Ejercicio 3 - El primer script</title>
 
-    <script type="text/javascript">
-      console.log("Hola Mundo!");
-    </script>
+<script src="ej2.js"></script>
   </head>
 
   <body>
