--- a/Javascript/ejercicio3/ej3.html
+++ b/Javascript/ejercicio3/ej3.html
@@ -4,8 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <title>Ejercicio 3 - El primer script</title>
 
-    <script type="text/javascript">
-      console.log("Hola Mundo!");
+    <script src="ej3.js">
     </script>
   </head>
 
