--- a/Javascript/ejercicio5/ej5.html
+++ b/Javascript/ejercicio5/ej5.html
@@ -2,19 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
     <title>Ejercicio 6 - DOM básico</title>
   </head>
 
-  <body>
-    <ul id="lista">
-      <li>Lorem ipsum dolor sit amet</li>
-      <li>Consectetuer adipiscing elit</li>
-      <li>Sed mattis enim vitae orci</li>
-      <li>Phasellus libero</li>
-      <li>Maecenas nisl arcu</li>
+  <body class="container mt-4">
+    <ul id="lista" class="list-group mb-2">
+      <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+      <li class="list-group-item">Consectetuer adipiscing elit</li>
+      <li class="list-group-item">Sed mattis enim vitae orci</li>
+      <li class="list-group-item">Phasellus libero</li>
+      <li class="list-group-item">Maecenas nisl arcu</li>
     </ul>
 
-    <input type="button" value="Añadir elemento" />
+    <input id="addButton" type="button" value="Añadir elemento" />
   </body>
   <script type="text/javascript" src="js/main.js"></script>
 </html>
