--- a/Javascript/ejercicio7/ej7.html
+++ b/Javascript/ejercicio7/ej7.html
@@ -4,9 +4,124 @@
     <title>Bootstrap Example</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- Bootstrap CSS -->
+        <link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      />
+      <style>
+        .error-message {
+          color: red;
+          font-size: 0.9em;
+        }
+      </style>
   </head>
 
   <body>
-    <div class="container text-center">Vuestro form aquí</div>
+    <div class="container text-center">
+      
+      <form class="needs-validation" novalidate>
+        <div class="form-row">
+          <!-- Nombre -->
+          <div class="col-sm-6 mb-3">
+            <label for="firstName">Nombre</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              required
+            />
+            <div class="invalid-feedback">Introduzca nombre</div>
+          </div>
+
+          <!-- Apellidos -->
+          <div class="col-sm-6 mb-3">
+            <label for="lastName">Apellidos</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lastName"
+              required
+            />
+            <div class="invalid-feedback">Introduzca apellidos</div>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <!-- Contraseña -->
+          <div class="col-sm-6 mb-3">
+            <label for="password">Contraseña</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              required
+            />
+            <div class="invalid-feedback">Introduzca contraseña</div>
+          </div>
+
+          <!-- Confirmación contraseña -->
+          <div class="col-sm-6 mb-3">
+            <label for="repeatPassword">Repita contraseña</label>
+            <input
+              type="password"
+              class="form-control"
+              id="repeatPassword"
+              required
+            />
+            <div class="invalid-feedback">Repita contraseña anterior</div>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <!-- Nombre de usuario -->
+          <div class="col-sm-6 mb-3">
+            <label for="username">Nombre de usuario</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">@</span>
+              </div>
+              <input
+                type="text"
+                class="form-control"
+                id="username"
+                required
+              />
+              <div class="invalid-feedback">Introduzca nombre de usuario</div>
+            </div>
+          </div>
+
+          <!-- País -->
+          <div class="col-sm-6 mb-3">
+            <label for="country">País</label>
+            <select class="custom-select" id="country" required>
+              <option value="">Seleccione...</option>
+              <option value="USA">Estados Unidos</option>
+              <option value="ARG">Argentina</option>
+              <option value="ESP">España</option>
+            </select>
+            <div class="invalid-feedback">Seleccione un país</div>
+          </div>
+        </div>
+
+        <!-- Condiciones de uso -->
+        <div class="form-check mb-3">
+          <input
+            type="checkbox"
+            class="form-check-input"
+            id="terms"
+            required
+          />
+          <label class="form-check-label" for="terms">Acepto las condiciones de uso de esta web.</label>
+          <div class="invalid-feedback">Debe aceptar para registrarse.</div>
+        </div>
+
+        <!-- Botón de envío -->
+        <button class="btn btn-primary btn-block" type="submit">Registrarse</button>
+        <script src="validationForm.js"></script>
+      </form>
+    </div>
+
+    </div>
   </body>
 </html>
