--- a/Javascript/ejercicio1/ej1.html
+++ b/Javascript/ejercicio1/ej1.html
@@ -9,5 +9,5 @@
 
   <body>
     <p>Esta página contiene el primer script</p>
-  </body>
-</html>
+    <a href="../index.html">Back</a>.
+    </html>
