--- a/Javascript/ejercicio4/ej4.html
+++ b/Javascript/ejercicio4/ej4.html
@@ -36,5 +36,7 @@
     </p>
     <a href="#" onclick="toggleText();">Seguir leyendo</a>
     <script type="text/javascript" src="js/main.js"></script>
+    <a href="../index.html">Back</a>.
+
   </body>
 </html>
