--- a/Javascript/ejercicio5/ej5.html
+++ b/Javascript/ejercicio5/ej5.html
@@ -17,6 +17,8 @@
     </ul>
 
     <input id="addButton" type="button" value="Añadir elemento" />
+    <a href="../index.html">Back</a>.
+
   </body>
   <script type="text/javascript" src="js/main.js"></script>
 </html>
