--- a/Javascript/ejercicio6/ej6.html
+++ b/Javascript/ejercicio6/ej6.html
@@ -51,5 +51,9 @@
       <a href="#">Ocultar contenidos</a>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
+    <div onclick="window.location.href='../index.html';" style="cursor: pointer;">
+      Volver
+    </div>
+    
   </body>
 </html>
