--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -1,27 +1,38 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <title>Ejercicio 10</title>
-  </head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ejercicio 10</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container mt-5">
+    <h1 class="text-center mb-4">Lista de Ejercicios</h1>
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text">Lista de cosas que he hecho:</p>
+        <ul class="list-group">
+          <li class="list-group-item">EJ1: <a href="ejercicio1/ej1.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ2: <a href="ejercicio2/ej2.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ3: <a href="ejercicio3/ej3.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ4: <a href="ejercicio4/ej4.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ5: <a href="ejercicio5/ej5.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ6: <a href="ejercicio6/ej6.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ7: <a href="ejercicio7/ej7.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ8: <a href="ejercicio8/ej8.html" class="btn btn-link">Entrar</a></li>
+          <li class="list-group-item">EJ9: <a href="ejercicio9/ej9.html" class="btn btn-link">Entrar</a></li>
+          <!-- Añadir más elementos aquí -->
+        </ul>
 
-  <body>
-    <p>Lista de cosas que he hecho:</p>
-    <ul>
-      <li>EJ1: <a href="ejercicio1/ej1.html">Entrar</a></li>
-      <li>EJ2: <a href="ejercicio2/ej2.html">Entrar</a></li>
-      <li>EJ3: <a href="ejercicio3/ej3.html">Entrar</a></li>
-      <li>EJ4: <a href="ejercicio4/ej4.html">Entrar</a></li>
-      <li>EJ5: <a href="ejercicio5/ej5.html">Entrar</a></li>
-      <li>EJ6: <a href="ejercicio6/ej6.html">Entrar</a></li>
-      <li>EJ7: <a href="ejercicio7/ej7.html">Entrar</a></li>
-      <li>EJ8: <a href="ejercicio8/ej8.html">Entrar</a></li>
-      <li>EJ9: <a href="ejercicio9/ej9.html">Entrar</a></li>
+      </div>
+    </div>
+  </div>
 
-
-      <!-- etc... -->
-    </ul>
-    <a href="../index.html">Back</a>.
-
-  </body>
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
